fix(style): scroll overflow

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,8 +5,7 @@ footer {
   text-align: center;
 }
 footer > section {
-  width: 100vw;
-
+  max-width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
