--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,6 +9,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 100vw;
 }
 header > img {
   width: 43rem;
