--- a/src/components/meetsList/MeetsList.css
+++ b/src/components/meetsList/MeetsList.css
@@ -1,4 +1,6 @@
 .contailerList > ul {
+  max-width: 100vw;
+  min-height: 100vh;
   margin-top: 2rem;
   list-style: none;
   display: grid;
