--- a/src/pages/eventList/eventlistPage.css
+++ b/src/pages/eventList/eventlistPage.css
@@ -1,8 +1,9 @@
 .MeetListPage {
   display: grid;
+  max-width: 100vw;
 }
 .MeetListPage > aside {
-  margin-top: 4rem;
+  margin-top: 4.5rem;
   display: flex;
   align-items: center;
   justify-content: space-around;
